Fixed the size of the h1 on small devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -85,4 +85,7 @@ canvas {
   .work--lockup .slider {
     width: 100%;
   }
+  .intro--banner h1 {
+    font-size: 2rem;
+  }
 }
